# OrangeNote

./: .gitattributes  .gitignore  README.md  action.md  action报错信息.md  github版本.md  index.html  latest.json  package-lock.json  package.json  报错信息.md  描述.md  问题描述.md
.github/: dependabot.yml
.github/workflows/: release.yml
.tauri/: key  key.pub
app-frontend/: .gitignore  package-lock.json  package.json
app-frontend/scripts/: rename-installer.sh  rename-linux.sh  rename-macos.sh  rename-windows.sh
app-frontend/src-tauri/: Cargo.toml  tauri.conf.json
app-frontend/src-tauri/capabilities/: default.json
app-frontend/src-tauri/src/: db.rs  lib.rs
app-frontend/src/components/: NoteEditor.tsx  ReminderModal.tsx  TagListView.tsx
app-frontend/src/i18n/: index.ts
app-frontend/src/i18n/locales/: en.ts  zh-TW.ts
app-frontend/src/lib/: tauri.ts  updater.ts
app-frontend/src/store/: useStore.ts
app-frontend/src/types/: index.ts
notes/: tauri-release-troubleshooting.md
scripts/: rename-linux.sh  rename-macos.sh  rename-windows.sh
skills/: tauri-release-workflow.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ColorPicker.tsx  NoteCard.tsx  NoteListView.tsx  Settings.tsx  Sidebar.tsx  TagManager.tsx
src/i18n/locales/: zh-CN.ts
